# vusb-daemon

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.in  doxygen.config
src/: .gitignore  Makefile.am  classes.h  db.c  db.h  device.c  libusb.c  list.h  main.c  policy.c  policy.h  project.h  rpc.c  udev.c  usbmanager.c  usbowls.c  vm.c  xenstore.c
